package installations added

--- a/104311395GRU.ipynb
+++ b/104311395GRU.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "9652b663-851c-4b1d-9623-6265fa61b6b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install scikit-learn pandas matplotlib tensorflow\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "65f3bb12",
    "metadata": {},
    "outputs": [],
@@ -20,18 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5b245f96",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Flattened traffic data points: 402432\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load dataset\n",
     "df = pd.read_csv(\"SData_Oct2006.csv\", header=1)\n",
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ad74a3e6",
    "metadata": {},
    "outputs": [],
@@ -90,26 +92,7 @@
    "execution_count": null,
    "id": "dcbf316a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/20\n",
-      "\u001b[1m10061/10061\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 2ms/step - loss: 0.0014 - val_loss: 5.7987e-04\n",
-      "Epoch 2/20\n",
-      "\u001b[1m10061/10061\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 2ms/step - loss: 0.0010 - val_loss: 5.7854e-04\n",
-      "Epoch 3/20\n",
-      "\u001b[1m10061/10061\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 2ms/step - loss: 9.7910e-04 - val_loss: 5.6159e-04\n",
-      "Epoch 4/20\n",
-      "\u001b[1m10061/10061\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 2ms/step - loss: 9.7782e-04 - val_loss: 5.6764e-04\n",
-      "Epoch 5/20\n",
-      "\u001b[1m10061/10061\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 2ms/step - loss: 9.7163e-04 - val_loss: 5.6947e-04\n",
-      "Epoch 6/20\n",
-      "\u001b[1m 4927/10061\u001b[0m \u001b[32m━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - loss: 9.4164e-04"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build and train GRU model\n",
     "model = Sequential()\n",
@@ -178,6 +161,14 @@
     "print(f\"MAE: {mae:.2f}\")\n",
     "print(f\"RMSE: {rmse:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c71d96a4-6779-45ff-968c-bc6245e9a4ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
